<resources>
    <string name="app_name">ft_hangouts</string>

    <string name="add_contact">Add Contact</string>

    <string name="save_contact">Save Contact</string>

    <string name="number_hint_t">Phone</string>
    <string name="first_name_hint_t">First Name</string>
    <string name="last_name_hint_t">Last Name</string>
    <string name="address_hint_t">Address</string>
    <string name="email_hint_t">Email</string>

    <string name="insert_success">Contact successfully added.</string>
    <string name="insert_fail">Error adding contact.</string>

    <string name="permisson_req">Permission required.</string>
    <string name="permisson_explain">This functionality requires the permission of</string>
    <string name="permisson_storage">To add a profile picture, we need storage permissions.</string>
    <string name="permisson_sms">To receive SMS, we need SMS permissions.</string>
    <string name="permisson_sms_send">To send SMS, we need SEND_SMS permissions.</string>
    <string name="permisson_call">To make calls, we need CALL_PHONE permissions.</string>
    <string name="permisson_notification">To read notifications, we need notification permissions.</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="configuration">Setting</string>

    <string name="confirmation_msg_sms">Are you sure you want to delete this message?</string>
    <string name="confirmation_title">Confirm deletion</string>
    <string name="confirmation_msg">Are you sure you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="select_image">Select Image</string>
    <string name="remove_image">Remove Image</string>

    <string name="name">Name last Name</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="send_sms">Message</string>

    <string name="number">Number:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>

    <string name="selector_color">Select the color of the Toolbar</string>
    <string name="darkmode">Dark Mode</string>
    <string name="bonus">Bonus Mode</string>
    <string name="apply">Apply</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <string name="closing_t">Last closing time:</string>

    <string name="sms_dialog">Send message</string>
    <string name="dialog_txt">Enter your message</string>

    <string name="need_number">The number field is required.</string>
    <string name="need_name">The name field is required.</string>
    <string name="empty_sms">The message cannot be empty.</string>
    <string name="only_bonus">Function only available with the bonus enabled.</string>

</resources>